[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/player.png" type="Texture" id=2]
[ext_resource path="res://scripts/PlayerInputController.gd" type="Script" id=3]
[ext_resource path="res://scripts/Inventory.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 28, 46 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
position = Vector2( 296, 296 )
collision_mask = 22
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="BulletSpawnLocation" type="Node2D" parent="."]
position = Vector2( 32, 0 )

[node name="RayCast_Floor_Right" type="RayCast2D" parent="."]
position = Vector2( 28, 0 )
enabled = true
cast_to = Vector2( 0, 48 )
collision_mask = 6

[node name="RayCast_Floor_Left" type="RayCast2D" parent="."]
position = Vector2( -28, 0 )
enabled = true
cast_to = Vector2( 0, 48 )
collision_mask = 6

[node name="FlipTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerInputController" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Inventory" type="Node" parent="."]
script = ExtResource( 4 )

